--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     h1, h2, p {
         border: 5px solid red;
     }
-    </style>
+</style>
 </head>
 <body>
 
@@ -28,8 +28,7 @@
 
 <!–– TODO1: INSERT YOUR PHOTO BELOW ––>
 <div style = "display: flex, justify-content: center;">
-<img src="https://i.imgur.com/WZ70IDQ.jpg" style = "width = 500px, height = 500px" /><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg" style = "width = 500px, height = 500px" />
-<img
+<img src="https://i.imgur.com/WZ70IDQ.jpg" style = "width = 500px, height = 500px" /><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg" style = "width = 500px, height = 500px" /><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg" style = "width = 500px, height = 500px" /><img src="https://medias.maisonsdumonde.com/image/upload/q_auto,f_auto/w_500/img/lampe-dinosaure-marron-500-12-34-193472_1.jpg" style = "width = 500px, height = 500px" />
     
 </body>
 </html>
