--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
 <h2>What is your name?</h2>
     <p>My name is Guerby<p>
 
-<!–– TODO1: INSERT YOUR NAME BELOW IN A PARAGRAPH ELEMENT ––>
-
 <h2>Say one truth and two lies about yourself?</h2>
     <p>I have no hair, I was adopted, i like to play basket <p>
 
-<!–– TODO1: INSERT YOUR ANSWER BELOW ––>
-
 <h2>What do you look like?</h2>
 
-<img src="https://i.imgur.com/WZ70IDQ.jpg"/><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg"/><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg"/><img src="https://medias.maisonsdumonde.com/image/upload/q_auto,f_auto/w_500/img/lampe-dinosaure-marron-500-12-34-193472_1.jpg"/>
+<img src="https://i.imgur.com/WZ70IDQ.jpg"/>
+    <img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg"/><img src="https://ichef.bbci.co.uk/news/660/cpsprodpb/5F92/production/_105266442_pckevinflint-croppedimage.jpg"/>
+    <img src="https://medias.maisonsdumonde.com/image/upload/q_auto,f_auto/w_500/img/lampe-dinosaure-marron-500-12-34-193472_1.jpg"/>
     
 </body>
 </html>
